feat: image support, basic

--- a/app/posts/building-ai-childrens-story-app/page.mdx
+++ b/app/posts/building-ai-childrens-story-app/page.mdx
@@ -22,11 +22,11 @@ Dall-E and Stable Diffusion are great at generating a single, hi-res image based
 
 I initially was generating images with the OpenAI API (which uses Dall-E, their text-to-image model), and getting very nice cartoon-like images quite easily. I quickly ran into rate limits though, and I realized after looking it up that it can only handle five images per minute (!) - not ideal for an app that more than one person is using!
 
-![Untitled](Lessons%20From%20Building%20an%20AI%20Storybook%20App%20a1f2474766cc4282bda5039091ff9298/Untitled.png)
+![OpenAI Model Rate Limits table](/images/posts/openai-model-rate-limits.png)
 
 So I quickly switched to stable diffusion. Stability's rate limits are much more reasonable, and for a modest fee. In addition their image generation capabilities are amazing.
 
-![Untitled](Lessons%20From%20Building%20an%20AI%20Storybook%20App%20a1f2474766cc4282bda5039091ff9298/Untitled%201.png)
+![Stability.ai model rate limits](/images/posts/stability-ai-rate-limits.png)
 
 ### Streaming JSON isn't perfect
 
