--- a/app/posts/(post)/building-ai-childrens-story-app/page.mdx
+++ b/app/posts/(post)/building-ai-childrens-story-app/page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Lessons From Building an AI Storybook App"
-excerpt: "The notion of building the StoryTime app came to me after using ChatGPT to generate stories for my two sons (4 and 3). Rather than input an elaborate prompt each and every time, I threw together an interface to let me pick an age group and a topic, then generate a story with a single click. As a secondary goal of building the app, I wanted very much to improve my skills with prompt engineering, and learn as much as I can about AI-related tools. This article will talk about some of my learnings."
+excerpt: "The notion of building the StoryTime app came to me after using ChatGPT to generate stories for my sons. This article will talk about some of my learnings."
 date: "2024-05-01"
 ---
 # Lessons From Building an AI Storybook App
