feat: featured image for post

--- a/app/posts/(post)/building-ai-childrens-story-app/page.mdx
+++ b/app/posts/(post)/building-ai-childrens-story-app/page.mdx
@@ -2,6 +2,10 @@
 title: "Lessons From Building an AI Storybook App"
 excerpt: "The notion of building the StoryTime app came to me after using ChatGPT to generate stories for my sons. This article will talk about some of my learnings."
 date: "2024-05-01"
+featuredImage:
+  src: "/images/posts/storytime-logo.png"
+  height: 500
+  width: 500
 ---
 # Lessons From Building an AI Storybook App
 
