--- a/data/posts/building-ai-childrens-story-app.mdx
+++ b/data/posts/building-ai-childrens-story-app.mdx
@@ -23,7 +23,7 @@ The current iteration of the app is built on:
 
 ### No consistent characters
 
-Dall-E and Stable Diffusion are great at generating a single, hi-res image based on a text prompt. But ask either of them to generate a red-speckled fish in a bowl and a red-speckled fish in the ocean, and you'll get two very different fish even with the same prompt. Getting consistent character imagery is very tricky with the current state of AI APIs; so for now I'm only generating a single image.
+Dall-E and Stable Diffusion are great at generating a single, hi-res image based on a text prompt. But ask either of them to generate a red-speckled fish in a bowl and a red-speckled fish in the ocean, and you'll get two very different fish even with the same prompt. Getting consistent character imagery is very tricky with the current state of AI APIs; so for now I$#39;m only generating a single image.
 
 ### Varying rate limits and pricing
 
