feat: post image

--- a/data/posts/multiple-parallel-streams-vercel-ai-sdk.mdx
+++ b/data/posts/multiple-parallel-streams-vercel-ai-sdk.mdx
@@ -3,7 +3,7 @@ title: "Multiple Parallel AI Streams with Vercel AI SDK"
 excerpt: "The Vercel AI SDK makes it easy to interact with LLM APIs like OpenAI, Anthropic and so on, and stream the data so it shows up in your web app rapidly as it loads. In this article we’ll learn how to run multiple prompts at the same time and see their results in parallel."
 date: "2024-05-13"
 featuredImage:
-  src: "/images/posts/storytime-logo.png"
+  src: "/images/posts/two-water-streams-running-in-parallel.jpg"
   height: 500
   width: 500
 ---
