--- a/app/ai-tools-for-js-devs/page.mdx
+++ b/app/ai-tools-for-js-devs/page.mdx
@@ -1,8 +1,10 @@
 # AI Resources for JavaScript/TypeScript Developers
 
-Every week I'm finding more libraries and resources that make working with AI more accessible to JavaScript and TypeScript developers. We don't have to become Python experts just to build some great web or mobile apps with A anymore.
+Every week I'm finding more libraries and resources that make working with AI more accessible to JavaScript and TypeScript developers. We don't have to become Python experts just to build some great web or mobile apps with AI anymore.
 
 Here I'll share some of the best resources I've found so far. I'll keep this list updated as I find more.
+
+Contact me on the socials to recommend more.
 
 <AIResourcesTable />
 
