feat: cover image

--- a/app/ai-tools-for-js-devs/page.mdx
+++ b/app/ai-tools-for-js-devs/page.mdx
@@ -1,3 +1,7 @@
+<div className="flex flex-row justify-center mb-4 md:mb-10">
+  <CoverImage title="AI for JavaScript Devs" src="/images/projects/ai-for-js-devs.webp" width={303} height={153} />
+</div>
+
 # AI Resources for JavaScript/TypeScript Developers
 
 Every week I'm finding more libraries and resources that make working with AI more accessible to JavaScript and TypeScript developers. We don't have to become Python experts just to build some great web or mobile apps with AI anymore.
