--- a/app/ai-for-js-devs/page.mdx
+++ b/app/ai-for-js-devs/page.mdx
@@ -1,8 +1,8 @@
-<div className="flex flex-row justify-center mb-4 md:mb-10">
+<div className="flex flex-row justify-center mb-10 md:mb-28">
   <CoverImage title="AI for JavaScript Devs" src="/images/projects/ai-for-js-devs.webp" width={303} height={153} />
 </div>
 
-# AI Resources for JavaScript/TypeScript Developers
+<Heading1 className="mb-4 text-center">AI Resources for JavaScript/TypeScript Developers</Heading1>
 
 Every week I'm finding more libraries and resources that make working with AI more accessible to JavaScript and TypeScript developers. We don't have to become Python experts just to build some great web or mobile apps with AI anymore.
 
