--- a/app/ai-for-js-devs/page.mdx
+++ b/app/ai-for-js-devs/page.mdx
@@ -1,3 +1,20 @@
+export const metadata = {
+  title: "AI for JavaScript Devs",
+  description: "AI resources for JavaScript and TypeScript developers.",
+  alternates: {
+    canonical: `/ai-for-js-devs`,
+  },
+  openGraph: {
+    images: ['/images/projects/ai-for-js-devs.webp'],
+  },
+    twitter: {
+      card: "summary_large_image",
+      site: "@mcavaliere",
+      description: "AI resources for JavaScript and TypeScript developers.",
+      images: ['/images/projects/ai-for-js-devs.webp']
+    },
+}
+
 <div className="flex flex-row justify-center mb-10 md:mb-28">
   <CoverImage title="AI for JavaScript Devs" src="/images/projects/ai-for-js-devs.webp" width={303} height={153} />
 </div>
