feat: upscaled image

--- a/app/ai-for-js-devs/page.mdx
+++ b/app/ai-for-js-devs/page.mdx
@@ -5,18 +5,18 @@ export const metadata = {
     canonical: `/ai-for-js-devs`,
   },
   openGraph: {
-    images: ['/images/projects/ai-for-js-devs.webp'],
+    images: ['/images/projects/ai-for-js-devs.png'],
   },
     twitter: {
       card: "summary_large_image",
       site: "@mcavaliere",
       description: "AI resources for JavaScript and TypeScript developers.",
-      images: ['/images/projects/ai-for-js-devs.webp']
+      images: ['/images/projects/ai-for-js-devs.png']
     },
 }
 
 <div className="flex flex-row justify-center mb-10 md:mb-28">
-  <CoverImage title="AI for JavaScript Devs" src="/images/projects/ai-for-js-devs.webp" width={303} height={153} />
+  <CoverImage title="AI for JavaScript Devs" src="/images/projects/ai-for-js-devs.png" width={303} height={153} />
 </div>
 
 <Heading1 className="mb-4 text-center">AI Resources for JavaScript/TypeScript Developers</Heading1>
