feat: social links

--- a/app/ai-for-js-devs/page.mdx
+++ b/app/ai-for-js-devs/page.mdx
@@ -23,9 +23,9 @@ export const metadata = {
 
 Every week I'm finding more libraries and resources that make working with AI more accessible to JavaScript and TypeScript developers. We don't have to become Python experts just to build some great web or mobile apps with AI anymore.
 
-Here I'll share some of the best resources I've found so far. I'll keep this list updated as I find more.
+Here I'll share some of the best resources I've found so far.
 
-Contact me on the socials to recommend more.
+Follow me on [Twitter](https://twitter.com/mcavaliere) or [LinkedIn](https://www.linkedin.com/in/mikecavaliere) for updates.
 
 <AIResourcesTable />
 
