feat: card component for newsletters

--- a/data/posts/ai-newsletters.mdx
+++ b/data/posts/ai-newsletters.mdx
@@ -9,45 +9,36 @@ As I dig deeper into the world of AI, I've found a few newsletters that have bee
 Depending on what your focus is, some of these may be more or less useful than others. Some focus purely on business news in the world of AI, whereas some are more focused on learning practical techniques for making life more productive via use of LLMs. And others have a little bit of everything.
 
 
-## AI News
+<AINewsletterCard title="AI News" frequency="daily" href="https://buttondown.email/ainews">
+    A huge, aggregated list of content by @swyx that draws from Twitter, Reddit, and a dozen Discord channels.
+</AINewsletterCard>
 
-<Badge variant="frequency">daily</Badge>
+<AINewsletterCard title="Superhuman AI" frequency="daily" href="https://www.superhuman.ai/">
+    A well-balanced mix of information that still manages to be a quick read. A bit of news, a brief list of new tools to check out, a productivity technique and other small bits of useful info. The “Prompt of the Day” is a nice touch.
 
-<a href="https://buttondown.email/ainews">🔗</a>
+    The newsletter creator, <a href="https://x.com/heykahn">Zain Kahn</a> has tons of great AI content on his socials as well.
+</AINewsletterCard>
 
-A huge, aggregated list of content by @swyx that draws from Twitter, Reddit, and a dozen Discord channels.
+<AINewsletterCard title="The Deep View" frequency="daily" href="https://www.thedeepview.ai/">
+    Bigger-picture news on the AI industry, happenings in regulation, big tech, and AI investments.
+</AINewsletterCard>
 
-- Superhuman AI
-    - https://www.superhuman.ai/
-    - https://x.com/heykahn
-    - Frequency: Daily
-    - A well-balanced mix of information that still manages to be a quick read. A bit of news, a brief list of new tools to check out, a productivity technique and other small bits of useful info. The “Prompt of the Day” is a nice touch.
+<AINewsletterCard title="The Rundown AI" frequency="weekly" href="https://www.therundown.ai/">
+    Also on twitter at <a href="https://x.com/therundownai">@therundownai</a>. Another balanced mix of AI business news, headlines, tools and job listings.
 
-- The Deep View
-    - https://www.thedeepview.ai/
-    - Bigger-picture news on the AI industry, happenings in regulation, big tech, and AI investments.
-    - Frequency: Daily
-- The Rundown AI
-    - https://www.therundown.ai/
-    - by https://x.com/rowancheung
-    - https://x.com/therundownai
-    - Another balanced mix of AI business news, headlines, tools and job listings.
-    - Frequency: Weekly
-- AI Breakfast
-    - https://aibreakfast.beehiiv.com/
-    - One-paragraph summaries and one-line bullets worth of AI news. Has more news-focused content than most of the other AI newsletters I read.
-    - Also lists 10 new tools every issue, and quick links on AI research.
-    - Frequency: Daily
-- The ProHuman AI
-    - https://www.theprohuman.ai/
-    - Lists out side hustles you can do with AI
-    - Frequency: Daily
-- NexTool AI
-    - https://www.nextool.ai/
-    - Concise list of AI tools, four per newsletter so it’s a fast read.
-    - Frequency: Weekly
+    Creator <a href="https://x.com/rowancheung">@rowancheung</a> also has great social content.
+</AINewsletterCard>
 
+<AINewsletterCard title="AI Breakfast" frequency="daily" href="https://aibreakfast.beehiiv.com/">
+    One-paragraph summaries and one-line bullets worth of AI news. Has more news-focused content than most of the other AI newsletters I read.
 
-  - The Sequence
-    - https://thesequence.substack.com/
-    - Heavier into ML terminology; my knowledge isn’t at the point where this is useful yet
+    Also lists 10 new tools every issue, and quick links on AI research.
+</AINewsletterCard>
+
+<AINewsletterCard title="The ProHuman AI" frequency="daily" href="https://www.theprohuman.ai/">
+    Lists out side hustles you can do with AI.
+</AINewsletterCard>
+
+<AINewsletterCard title="NexTool AI" frequency="weekly" href="https://www.nextool.ai/">
+    A concise list of AI tools, four per newsletter so it’s a fast read.
+</AINewsletterCard>
