feat: post image, card styles

--- a/data/posts/ai-newsletters.mdx
+++ b/data/posts/ai-newsletters.mdx
@@ -2,6 +2,10 @@
 title: "AI Newsletters I Follow"
 excerpt: "As I dig deeper into the world of AI, I've found a few newsletters that have been invaluable in keeping me up to date."
 date: "2024-06-05"
+featuredImage:
+  src: "/images/posts/ai_newsletters-emoji.webp"
+  height: 320
+  width: 680
 ---
 
 As I dig deeper into the world of AI, I've found a few newsletters that have been invaluable in keeping me up to date.
@@ -10,7 +14,7 @@ Depending on what your focus is, some of these may be more or less useful than o
 
 
 <AINewsletterCard title="AI News" frequency="daily" href="https://buttondown.email/ainews">
-    A huge, aggregated list of content by @swyx that draws from Twitter, Reddit, and a dozen Discord channels.
+    A huge, aggregated list of content by <a href="https://x.com/swyx">@swyx</a> that draws from Twitter, Reddit, and a dozen Discord channels.
 </AINewsletterCard>
 
 <AINewsletterCard title="Superhuman AI" frequency="daily" href="https://www.superhuman.ai/">
