feat: twitter links

--- a/data/posts/ai-newsletters.mdx
+++ b/data/posts/ai-newsletters.mdx
@@ -14,13 +14,13 @@ Depending on what your focus is, some of these may be more or less useful than o
 
 
 <AINewsletterCard title="AI News" frequency="daily" href="https://buttondown.email/ainews">
-    A huge, aggregated list of content by <a href="https://x.com/swyx">@swyx</a> that draws from Twitter, Reddit, and a dozen Discord channels.
+    A huge, aggregated list of content by <TwitterLink username="swyx" /> that draws from Twitter, Reddit, and a dozen Discord channels.
 </AINewsletterCard>
 
 <AINewsletterCard title="Superhuman AI" frequency="daily" href="https://www.superhuman.ai/">
     A well-balanced mix of information that still manages to be a quick read. A bit of news, a brief list of new tools to check out, a productivity technique and other small bits of useful info. The “Prompt of the Day” is a nice touch.
 
-    The newsletter creator, <a href="https://x.com/heykahn">Zain Kahn</a> has tons of great AI content on his socials as well.
+    The newsletter creator, <TwitterLink username="heykahn">Zain Kahn</TwitterLink> has tons of great AI content on his socials as well.
 </AINewsletterCard>
 
 <AINewsletterCard title="The Deep View" frequency="daily" href="https://www.thedeepview.ai/">
@@ -28,9 +28,9 @@ Depending on what your focus is, some of these may be more or less useful than o
 </AINewsletterCard>
 
 <AINewsletterCard title="The Rundown AI" frequency="weekly" href="https://www.therundown.ai/">
-    Also on twitter at <a href="https://x.com/therundownai">@therundownai</a>. Another balanced mix of AI business news, headlines, tools and job listings.
+    Also on twitter at <TwitterLink username="therundownai" />. Another balanced mix of AI business news, headlines, tools and job listings.
 
-    Creator <a href="https://x.com/rowancheung">@rowancheung</a> also has great social content.
+    Creator <TwitterLink username="rowancheung" /> also has great social content.
 </AINewsletterCard>
 
 <AINewsletterCard title="AI Breakfast" frequency="daily" href="https://aibreakfast.beehiiv.com/">
