--- a/app/ai-for-js-devs/page.mdx
+++ b/app/ai-for-js-devs/page.mdx
@@ -1,3 +1,7 @@
+import { AIResourcesTable } from '@/components/AIResourcesTable/AIResourcesTable'
+import CoverImage from '@/components/cover-image'
+import { Heading1 } from '@/components/Headings'
+
 export const metadata = {
   title: "AI for JavaScript Devs",
   description: "AI resources for JavaScript and TypeScript developers.",
