--- a/app/ai-for-js-devs/page.mdx
+++ b/app/ai-for-js-devs/page.mdx
@@ -25,11 +25,13 @@ export const metadata = {
 
 <Heading1 className="mb-4 text-center">AI Resources for JavaScript/TypeScript Developers</Heading1>
 
-Every week I'm finding more libraries and resources that make working with AI more accessible to JavaScript and TypeScript developers. We don't have to become Python experts just to build some great web or mobile apps with AI anymore.
+<div className="mb-3">
+  Every week, I'm finding more libraries and resources that make working with AI more accessible to JavaScript and TypeScript developers. We don't have to become Python experts just to build some great web or mobile apps with AI anymore. Here, I'll share some of the best resources I've found so far.
+</div>
 
-Here I'll share some of the best resources I've found so far.
-
-Follow me on [Twitter](https://twitter.com/mcavaliere) or [LinkedIn](https://www.linkedin.com/in/mikecavaliere) for updates.
+<div className="mb-3">
+  Follow me on <a className="underline hover:text-primary" href="https://twitter.com/mcavaliere">Twitter</a> or <a className="underline hover:text-primary" href="https://www.linkedin.com/in/mikecavaliere">LinkedIn</a> for updates.
+</div>
 
 <AIResourcesTable />
 
