--- a/app/ai-for-js-devs/page.mdx
+++ b/app/ai-for-js-devs/page.mdx
@@ -23,15 +23,15 @@ export const metadata = {
   <CoverImage title="AI for JavaScript Devs" src="/images/projects/ai-for-js-devs.png" width={303} height={153} />
 </div>
 
-<Heading1 className="mb-4 text-center">AI Resources for JavaScript/TypeScript Developers</Heading1>
+<Heading1 className="mb-10 text-center">AI Resources for JavaScript/TypeScript Developers</Heading1>
 
-<div className="mb-3">
+<p className="mb-10 text-center">
   Every week, I'm finding more libraries and resources that make working with AI more accessible to JavaScript and TypeScript developers. We don't have to become Python experts just to build some great web or mobile apps with AI anymore. Here, I'll share some of the best resources I've found so far.
-</div>
+</p>
 
-<div className="mb-3">
+<p className="mb-10 text-center">
   Follow me on <a className="underline hover:text-primary" href="https://twitter.com/mcavaliere">Twitter</a> or <a className="underline hover:text-primary" href="https://www.linkedin.com/in/mikecavaliere">LinkedIn</a> for updates.
-</div>
+</p>
 
 <AIResourcesTable />
 
