feat: component for prompt patterns formatting

--- a/data/posts/openai-prompt-patterns.mdx
+++ b/data/posts/openai-prompt-patterns.mdx
@@ -6,3 +6,4 @@ date: "2024-07-01"
 
 While going through a course on prompt engineering, I came across a great research paper called "A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT." The paper contains a lot of good prompt engineering techniques, so I wanted to summarize them here as a cheat sheet.
 
+<PromptPatterns />
