--- a/data/posts/openai-prompt-patterns.mdx
+++ b/data/posts/openai-prompt-patterns.mdx
@@ -1,9 +1,10 @@
 ---
-title: "OpenaAI Prompt Engineering Patterns"
+title: "OpenAI Prompt Engineering Patterns"
 excerpt: ""
 date: "2024-07-01"
 ---
 
-While going through a course on prompt engineering, I came across a great research paper called "A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT." The paper contains a lot of good prompt engineering techniques, so I wanted to summarize them here as a cheat sheet.
+While going through a course on prompt engineering, I came across a great research paper called ["A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT."](https://arxiv.org/abs/2302.11382) The paper contains a lot of good prompt engineering techniques, so I wanted to summarize them here as a cheat sheet.
+
 
 <PromptPatterns />
