chore: more content

--- a/data/posts/openai-prompt-patterns.mdx
+++ b/data/posts/openai-prompt-patterns.mdx
@@ -1,10 +1,11 @@
 ---
-title: "OpenAI Prompt Engineering Patterns"
-excerpt: ""
+title: "Prompt Engineering Patterns"
+excerpt: "Prompt engineering patterns can enhance the results you get from interacting with an LLM. Here is a set of established patterns you can use with OpenAI or any other large language model."
 date: "2024-07-01"
 ---
 
 While going through a course on prompt engineering, I came across a great research paper called ["A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT."](https://arxiv.org/abs/2302.11382) The paper contains a lot of good prompt engineering techniques, so I wanted to summarize them here as a cheat sheet.
 
+Prompt engineering patterns can enhance the results you get from interacting with an LLM. These were derived from working with ChatGPT, but they can be applied to any other large language model.
 
 <PromptPatterns />
