--- a/data/posts/openai-prompt-patterns.mdx
+++ b/data/posts/openai-prompt-patterns.mdx
@@ -6,6 +6,6 @@ date: "2024-07-01"
 
 While going through a course on prompt engineering, I came across a great research paper called ["A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT."](https://arxiv.org/abs/2302.11382) The paper contains a lot of good prompt engineering techniques, so I wanted to summarize them here as a cheat sheet.
 
-Prompt engineering patterns can enhance the results you get from interacting with an LLM. These were derived from working with ChatGPT, but they can be applied to any other large language model.
+Prompt engineering patterns can enhance the results you get from interacting with a large language model. These were derived from working with ChatGPT, but they can be applied to any other LLM (Claude, Mistral, etc).
 
 <PromptPatterns />
