--- a/data/posts/openai-prompt-patterns.mdx
+++ b/data/posts/openai-prompt-patterns.mdx
@@ -8,4 +8,8 @@ While going through a course on prompt engineering, I came across a great resear
 
 Prompt engineering patterns can enhance the results you get from interacting with a large language model. These were derived from working with ChatGPT, but they can be applied to any other LLM (Claude, Mistral, etc).
 
+They can also be used in combination with each other to create more complex prompts; experimentation is key. Also note that the list below isn't exhaustive.
+
 <PromptPatterns />
+
+The original research paper can be found [here](https://arxiv.org/abs/2302.11382).
