--- a/data/posts/everyone-should-learn-prompt-engineering.mdx
+++ b/data/posts/everyone-should-learn-prompt-engineering.mdx
@@ -11,7 +11,7 @@ Right now we’re in an amazing time. AI and ML have been around for a long time
 </aside>
 
 ## Non-Technical Users
-The average person should learn prompt engineering to use LLMs more effectively. Even simple Persona patterns of prompting (e.g., `You're an expert marker. Write me some marketing copy for X.`) can make a LLM far more effective than a raw, basic prompt (`Write me some marketing copy for X`).
+The average person should learn prompt engineering to use LLMs more effectively. Even simple Persona patterns of prompting (e.g., `You're an expert marketer. Write me some marketing copy for X.`) can make a LLM far more effective than a raw, basic prompt (`Write me some marketing copy for X`).
 
 ## Software Engineers
 Conventional web software engineers (those building web apps, mobile apps, APIs, and so on)  can and should be using LLMs to generate code and reduce repeated work. Quite often, they’ll be asked to build features using LLMs, so prompt engineering will be at the center of making these features effective. In addition they’ll need to learn all the logistical implications of doing this - how to test and measure the effectiveness of LLM-driven features, how to host and scale them, and so on.
@@ -21,6 +21,6 @@ Even machine learning engineers should learn prompt engineering. Why, when they 
 
 ## Will prompt engineering be obsolete?
 
-As of right now I don't think so. I think it will definitely change a lot, and some techniques will become unnecessary as models become more intuitive.
+As of right now I don't think so. I think it will definitely change a lot, and some techniques will become unnecessary as models become more intuitive. Some prompting patterns will become defunct, and others will emerge as LLMs continue to evolve and change. But in the same way the English language (and all others) don't change frequently, I think the way we interact with LLMs will
 
 At its core, prompt engineering is becoming a crucial skill across various domains, from everyday users to specialized professionals. As Large Language Models (LLMs) continue to reshape our digital landscape, mastering the art of crafting effective prompts will not only enhance personal productivity but also drive innovation in numerous fields, making it an indispensable tool for navigating the AI-driven future.
