fix: formatting for inline code blocks

--- a/data/posts/multiple-parallel-streams-vercel-ai-sdk.mdx
+++ b/data/posts/multiple-parallel-streams-vercel-ai-sdk.mdx
@@ -31,7 +31,7 @@ You can clone the GitHub repo containing the final result [here](https://github.
 
 The main component that does all the work will contain a form and some containers for the output. Using some basic shadcn-ui components, the form will look like this:
 
-```
+```tsx
 export function GenerationForm() {
     // State and other info will be defined here...
 
