--- a/data/posts/everyone-should-learn-prompt-engineering.mdx
+++ b/data/posts/everyone-should-learn-prompt-engineering.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Everyone Should Learn Prompt Engineering, Even Software Engineers"
-excerpt: ""
-date: "2024-07-07"
+excerpt: "Here's a shorter, two-sentence excerpt without sales-y language:
+Prompt engineering, the skill of effectively communicating with AI, is becoming essential for everyone from non-technical users to software and ML engineers. This article explores how prompt engineering enhances productivity across various domains and its role in the evolving landscape of Large Language Models (LLMs)."
+date: "2024-07-08"
 
 ---
 Right now we’re in an amazing time. AI and ML have been around for a long time; but ChatGPT made the non-technical world sit up and take notice. And now LLMs are taking the world by storm. Within the next 10 years, everyone will be using them. IMO, right now, prompt engineering is an essential skill to learn for keeping up with the information tidal wave surrounding LLMs as it continues to evolve.
