--- a/data/posts/openai-prompt-patterns.mdx
+++ b/data/posts/openai-prompt-patterns.mdx
@@ -10,6 +10,6 @@ Prompt engineering patterns can enhance the results you get from interacting wit
 
 They can also be used in combination with each other to create more complex prompts; experimentation is key. Also note that the list below isn't exhaustive.
 
-<PromptPatterns />
+<PromptPatterns className="mb-10" />
 
 The original research paper can be found [here](https://arxiv.org/abs/2302.11382).
