feat: updated image

--- a/data/posts/everyone-should-learn-prompt-engineering.mdx
+++ b/data/posts/everyone-should-learn-prompt-engineering.mdx
@@ -6,7 +6,8 @@ featuredImage:
   src: "/images/posts/matthew-lancaster-MthZSf_Blzs-unsplash.webp"
   height: 500
   width: 500
-
+  alt: "A detailed close-up of a chain link, showcasing its intricate design and texture."
+  caption: 'Photo by <a href="https://unsplash.com/@matthewelancaster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Matthew Lancaster</a> on <a href="https://unsplash.com/photos/gray-metal-chain-in-close-up-photography-MthZSf_Blzs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>'
 ---
 Right now we’re in an amazing time. AI and ML have been around for a long time; but ChatGPT made the non-technical world sit up and take notice. And now LLMs are taking the world by storm. Within the next 10 years, everyone will be using them. IMO, right now, prompt engineering is an essential skill to learn for keeping up with the information tidal wave surrounding LLMs as it continues to evolve.
 
