fix: remove bold text

--- a/data/posts/multiple-parallel-streams-vercel-ai-sdk.mdx
+++ b/data/posts/multiple-parallel-streams-vercel-ai-sdk.mdx
@@ -211,7 +211,7 @@ export function GenerationForm() {
 
 ## Further reading & links
 
-- **[Server Actions and Mutations](https://nextjs.org/docs/app/building-your-application/data-fetching/server-actions-and-mutations)**
+- [Server Actions and Mutations](https://nextjs.org/docs/app/building-your-application/data-fetching/server-actions-and-mutations)
 - [Vercel AI SDK](https://sdk.vercel.ai/docs/introduction)
 - [`streamText()`](https://sdk.vercel.ai/docs/reference/ai-sdk-core/stream-text) API docs
-- **[Next.js App Router Quickstart](https://sdk.vercel.ai/docs/getting-started/nextjs-app-router#nextjs-app-router-quickstart)**
+- [Next.js App Router Quickstart](https://sdk.vercel.ai/docs/getting-started/nextjs-app-router#nextjs-app-router-quickstart)
