content: update title

--- a/data/posts/openai-prompt-patterns.mdx
+++ b/data/posts/openai-prompt-patterns.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Prompt Engineering Patterns"
+title: "A Prompt Engineering Patterns Reference"
 excerpt: "Prompt engineering patterns can enhance the results you get from interacting with an LLM. Here is a set of established patterns you can use with OpenAI or any other large language model."
 date: "2024-07-01"
 ---
