--- a/app/ai-for-js-devs/page.mdx
+++ b/app/ai-for-js-devs/page.mdx
@@ -1,6 +1,8 @@
 import { AIResourcesTable } from '@/components/AIResourcesTable/AIResourcesTable'
+import { AIArticleList } from '@/components/AIResourcesTable/AIArticleList'
 import CoverImage from '@/components/cover-image'
 import { Heading1 } from '@/components/Headings'
+import { Tabs, TabsContent, TabsList, TabsTrigger } from "@/components/ui/tabs";
 
 export const metadata = {
   title: "AI for JavaScript Devs",
@@ -33,5 +35,17 @@ export const metadata = {
   Follow me on <a className="underline hover:text-primary" href="https://twitter.com/mcavaliere">Twitter</a> or <a className="underline hover:text-primary" href="https://www.linkedin.com/in/mikecavaliere">LinkedIn</a> for updates.
 </div>
 
-<AIResourcesTable />
+
+<Tabs defaultValue="tools">
+  <TabsList>
+    <TabsTrigger value="tools">🛠️ Tools</TabsTrigger>
+    <TabsTrigger value="articles">📄 Articles</TabsTrigger>
+  </TabsList>
+  <TabsContent value="tools">
+    <AIResourcesTable />
+  </TabsContent>
+  <TabsContent value="articles">
+    <AIArticleList />
+  </TabsContent>
+</Tabs>
 
